# dhvani

./: .gitignore  LICENSE  MANIFEST.in  README.md  SENTIMENT_EXAMPLES.md  pyproject.toml
data/: devanagari_words.txt  devanagari_words_expanded.txt  devanagari_words_large.txt  hinglish_wordlist.txt  romanized_words.txt  search_index.json  sentiment_results.json
demo/: Dockerfile  app.py  deploy_to_hf.sh  requirements.txt  server.py
demo/deploy/: Dockerfile  README.md  server.py
demo/deploy/static/: index.html
demo/static/: index.html
dhvani/: __init__.py  cache.py  cli.py  core.py  corrector.py  ipa.py  ipa_pipeline.py  lang_id.py  similarity.py  text_utils.py  transliterate.py
dhvani/lexicon/: lookup.py
dhwani/: __init__.py  cache.py  cli.py  core.py  corrector.py  ipa.py  ipa_pipeline.py  lang_id.py  normalizer.py  similarity.py  transliterate.py
dhwani/lexicon/: hinglish_lexicon.json  lookup.py
scripts/: build_search_index.py  expand_large.slurm  expand_lexicon.py  expand_lexicon.slurm  expand_lexicon_v2.py  expand_massive_v2.slurm  extract_from_datasets.py  extract_hindi_words.py  generate_lexicon.py  generate_lexicon.slurm  sentiment_experiment.py
tests/: test_core.py
