[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhvani"
version = "0.2.5"
description = "Phonetic normalization for Hinglish text. Resolves spelling variation in Romanized Hindi using IPA as a bridge representation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Krishna Badikela"}
]
keywords = ["hinglish", "hindi", "ipa", "phonetics", "transliteration", "nlp", "normalization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Hindi",
    "Natural Language :: English",
]

dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
models = ["ai4bharat-transliteration>=1.0", "epitran>=1.24"]
full = ["ai4bharat-transliteration>=1.0", "epitran>=1.24", "phonemizer>=3.0"]
dev = ["pytest", "pytest-cov", "ruff"]
demo = ["gradio>=4.0"]

[project.scripts]
dhvani = "dhvani.cli:main"

[project.urls]
Homepage = "https://github.com/Kkoundinyaa/dhwani"
Repository = "https://github.com/Kkoundinyaa/dhwani"
Issues = "https://github.com/Kkoundinyaa/dhwani/issues"

[tool.setuptools.packages.find]
include = ["dhvani*"]

[tool.setuptools.package-data]
"dhvani.lexicon" = ["*.json"]

[tool.ruff]
line-length = 100
